--- a/model_fetch_flutter/pubspec.yaml
+++ b/model_fetch_flutter/pubspec.yaml
@@ -1,6 +1,6 @@
 name: model_fetch_flutter
 description: Flutter widgets to build lazy load lists from model_fetch package.
-version: 0.1.0
+version: 0.2.0
 homepage: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
@@ -8,7 +8,9 @@ environment:
   flutter: ">=2.10.5"
 
 dependencies:
-  model_fetch: ^0.1.0
+  model_fetch: ^0.2.0
+#  model_fetch:
+#    path: '../model_fetch'
   visibility_detector: 0.2.2 # https://github.com/google/flutter.widgets/issues/354
 
   flutter:
