--- a/model_fetch/pubspec.yaml
+++ b/model_fetch/pubspec.yaml
@@ -1,12 +1,15 @@
 name: model_fetch
 description: A lazy load BLoC wrapper for your data source.
-version: 0.2.0
+version: 0.3.0
 homepage: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   meta: ^1.7.0
   model_interfaces: ^0.1.4
   rxdart: ^0.27.3
+
+dev_dependencies:
+  lints: 2.0.0
