--- a/model_fetch_flutter/pubspec.yaml
+++ b/model_fetch_flutter/pubspec.yaml
@@ -1,6 +1,6 @@
 name: model_fetch_flutter
 description: Flutter widgets to build lazy load lists from model_fetch package.
-version: 0.2.1
+version: 0.3.0
 homepage: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
@@ -8,10 +8,13 @@ environment:
   flutter: ">=3.0.0"
 
 dependencies:
-  model_fetch: ^0.2.0
+  model_fetch: ^0.3.0
 #  model_fetch:
 #    path: '../model_fetch'
   visibility_detector: ^0.3.3
 
   flutter:
     sdk: flutter
+
+dev_dependencies:
+  flutter_lints: ^2.0.1
