--- a/model_fetch/pubspec.yaml
+++ b/model_fetch/pubspec.yaml
@@ -1,6 +1,6 @@
 name: model_fetch
 description: A lazy load BLoC wrapper for your data source.
-version: 0.3.0
+version: 0.4.0
 homepage: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
@@ -8,8 +8,8 @@ environment:
 
 dependencies:
   meta: ^1.7.0
-  model_interfaces: ^0.1.4
+  model_interfaces: ^0.3.0
   rxdart: ^0.27.3
 
 dev_dependencies:
-  lints: 2.0.0
+  total_lints: ^2.18.0
