--- a/model_fetch_firestore/pubspec.yaml
+++ b/model_fetch_firestore/pubspec.yaml
@@ -1,19 +1,19 @@
 name: model_fetch_firestore
 description: A lazy load BLoC wrapper for Firestore collections.
-version: 0.3.0
+version: 0.4.0
 homepage: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
-  cloud_firestore: ^3.1.13
+  cloud_firestore: ^4.1.0
   meta: ^1.7.0
-  model_fetch: ^0.3.0
-  model_interfaces: ^0.1.4
+  model_fetch: ^0.4.0
+  model_interfaces: ^0.3.0
 
-#  model_fetch:
-#    path: '../model_fetch'
+dependency_overrides:
+  #model_fetch: { path: '../model_fetch' }
 
 dev_dependencies:
-  lints: 2.0.0
+  total_lints: ^2.18.0
