--- a/model_fetch_flutter/pubspec.yaml
+++ b/model_fetch_flutter/pubspec.yaml
@@ -1,6 +1,6 @@
 name: model_fetch_flutter
 description: Flutter widgets to build lazy load lists from model_fetch package.
-version: 0.3.0
+version: 0.4.0
 homepage: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
@@ -8,13 +8,12 @@ environment:
   flutter: ">=3.0.0"
 
 dependencies:
-  model_fetch: ^0.3.0
-#  model_fetch:
-#    path: '../model_fetch'
+  flutter: { sdk: flutter }
+  model_fetch: ^0.4.0
   visibility_detector: ^0.3.3
 
-  flutter:
-    sdk: flutter
+dependency_overrides:
+  #model_fetch: { path: '../model_fetch' }
 
 dev_dependencies:
-  flutter_lints: ^2.0.1
+  total_lints: ^2.18.0
