--- a/model_fetch/pubspec.yaml
+++ b/model_fetch/pubspec.yaml
@@ -1,7 +1,7 @@
 name: model_fetch
 description: A lazy load BLoC wrapper for your data source.
-version: 0.4.0
-homepage: https://github.com/alexeyinkin/dart-model-fetch
+version: 0.5.0
+repository: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
