--- a/model_fetch_firestore/pubspec.yaml
+++ b/model_fetch_firestore/pubspec.yaml
@@ -1,7 +1,7 @@
 name: model_fetch_firestore
 description: A lazy load BLoC wrapper for Firestore collections.
-version: 0.4.0
-homepage: https://github.com/alexeyinkin/dart-model-fetch
+version: 0.5.0
+repository: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -9,7 +9,7 @@ environment:
 dependencies:
   cloud_firestore: ^4.1.0
   meta: ^1.7.0
-  model_fetch: ^0.4.0
+  model_fetch: ^0.5.0
   model_interfaces: ^0.3.0
 
 dependency_overrides:
