--- a/model_fetch_flutter/pubspec.yaml
+++ b/model_fetch_flutter/pubspec.yaml
@@ -1,7 +1,7 @@
 name: model_fetch_flutter
 description: Flutter widgets to build lazy load lists from model_fetch package.
-version: 0.4.0
-homepage: https://github.com/alexeyinkin/dart-model-fetch
+version: 0.5.0
+repository: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -9,7 +9,7 @@ environment:
 
 dependencies:
   flutter: { sdk: flutter }
-  model_fetch: ^0.4.0
+  model_fetch: ^0.5.0
   visibility_detector: ^0.3.3
 
 dependency_overrides:
