--- a/model_fetch_firestore/pubspec.yaml
+++ b/model_fetch_firestore/pubspec.yaml
@@ -1,14 +1,16 @@
 name: model_fetch_firestore
 description: A lazy load BLoC wrapper for Firestore collections.
-version: 0.5.4
+version: 0.5.5
 repository: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=2.17.0 <4.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
   cloud_firestore: ^4.1.0
   collection: ^1.16.0
+  flutter: { sdk: flutter }
   meta: ^1.7.0
   model_fetch: ^0.5.4
   model_interfaces: ^0.3.0
@@ -17,4 +19,4 @@ dependency_overrides:
   #model_fetch: { path: '../model_fetch' }
 
 dev_dependencies:
-  total_lints: ^2.18.0
+  total_lints: ^3.1.0
