--- a/model_fetch_flutter/pubspec.yaml
+++ b/model_fetch_flutter/pubspec.yaml
@@ -1,6 +1,6 @@
 name: model_fetch_flutter
 description: Flutter widgets to build lazy load lists from model_fetch package.
-version: 0.5.5
+version: 0.5.6
 repository: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter: { sdk: flutter }
   model_fetch: ^0.5.0
-  visibility_detector: ^0.3.3
+  visibility_detector: '>=0.3.3 <5.0.0'
 
 dependency_overrides:
   #model_fetch: { path: '../model_fetch' }
