--- a/model_fetch_firestore/pubspec.yaml
+++ b/model_fetch_firestore/pubspec.yaml
@@ -1,16 +1,18 @@
 name: model_fetch_firestore
 description: A lazy load BLoC wrapper for Firestore collections.
-version: 0.5.7
+version: 0.6.0-1.dev
 repository: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
-  sdk: '>=2.17.0 <4.0.0'
+  sdk: ^3.5.0-180
   flutter: ">=3.0.0"
 
 dependencies:
   cloud_firestore: '>=4.1.0 <6.0.0'
   collection: ^1.16.0
   flutter: { sdk: flutter }
+  macro_util: ^0.1.0-10.dev
+  macros: ^0.1.0-main.5
   meta: ^1.7.0
   model_fetch: ^0.5.6
   model_interfaces: ^0.3.0
