--- a/model_fetch_firestore/pubspec.yaml
+++ b/model_fetch_firestore/pubspec.yaml
@@ -1,6 +1,6 @@
 name: model_fetch_firestore
 description: A lazy load BLoC wrapper for Firestore collections.
-version: 0.6.0-1.dev
+version: 0.6.0-2.dev
 repository: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
@@ -10,6 +10,7 @@ environment:
 dependencies:
   cloud_firestore: '>=4.1.0 <6.0.0'
   collection: ^1.16.0
+  common_macros: ^0.1.0-5.dev
   flutter: { sdk: flutter }
   macro_util: ^0.1.0-10.dev
   macros: ^0.1.0-main.5
@@ -18,6 +19,7 @@ dependencies:
   model_interfaces: ^0.3.0
 
 dependency_overrides:
+  #common_macros: { path: ../../dart-common-macros }
   #model_fetch: { path: '../model_fetch' }
 
 dev_dependencies:
