--- a/model_fetch_flutter/pubspec.yaml
+++ b/model_fetch_flutter/pubspec.yaml
@@ -1,6 +1,6 @@
 name: model_fetch_flutter
 description: Flutter widgets to build lazy load lists from model_fetch package.
-version: 0.6.0-7.dev
+version: 0.6.0
 repository: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
