--- a/model_fetch/pubspec.yaml
+++ b/model_fetch/pubspec.yaml
@@ -1,6 +1,6 @@
 name: model_fetch
-description: A lazy load BLoC wrapper for your data source.
-version: 0.6.3
+description: A lazy load wrapper for your data source.
+version: 0.6.4
 repository: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
@@ -12,4 +12,4 @@ dependencies:
   rxdart: '>=0.27.3 <0.29.0'
 
 dev_dependencies:
-  total_lints: ^3.1.0
+  total_lints: ^3.4.0
