--- a/model_fetch_flutter/pubspec.yaml
+++ b/model_fetch_flutter/pubspec.yaml
@@ -1,17 +1,19 @@
 name: model_fetch_flutter
 description: Flutter widgets to build lazy load lists from model_fetch package.
-version: 0.6.4
+version: 0.7.0
 repository: https://github.com/alexeyinkin/dart-model-fetch
 
 environment:
-  sdk: ^3.0.0
+  sdk: ^3.6.0
   flutter: ">=3.0.0"
+
+resolution: workspace
 
 dependencies:
   collection: ^1.17.2
   flutter: { sdk: flutter }
   model_editors: ^0.4.2
-  model_fetch: ^0.6.3
+  model_fetch: ^0.7.0
   model_interfaces: ^0.3.3
   visibility_detector: '>=0.3.3 <5.0.0'
 
